--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ requires-python = '>=3.10'
 dependencies = [
   'pytest',
   'rich',
-  'fastapi[standard]',
+  'fastapi[standard]', 
+  'pytest-cov',
 ]
