--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -1,23 +1,19 @@
-name: Python Tests
+name: Simple Python Test
 
 on: [push, pull_request]
 
 jobs:
   test:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        python-version: [3.7, 3.8, 3.9, 3.10, 3.11]  # Les versions de Python à tester
+    runs-on: ubuntu-latest  # Utiliser la dernière version d'Ubuntu
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Setup Python ${{ matrix.python-version }}
+    - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.10  # Testez avec une seule version de Python
 
     - name: Install dependencies
       run: |
@@ -25,5 +21,4 @@ jobs:
         pip install -r requirements.txt
 
     - name: Run tests
-      run: |
-        pytest --maxfail=1 --disable-warnings
+      run: pytest
